# dev-standards-plugin

./: .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
agents/: CLAUDE.md  code-reviewer.md  doc-writer.md  error-standards.md  git-standards.md  housekeeping-standards.md  investigator.md  lint-standards.md  logging-standards.md  naming-standards.md  standards-orchestrator.md  test-standards.md  test-writer.md  type-standards.md  validation-standards.md
commands/: CLAUDE.md  debug.md  fix.md  handoff.md  logs.md  plan.md  review.md  scaffold.md  setup.md  typecheck.md  validate.md
config/: defaults.json  doc-size-limits.json
docs/: CLAUDE.md  README.md
hooks/: CLAUDE.md  _graph.py  _hook_shared.py  _incident.py  _memory.py  _os_safe.py  _profiles.py  _session_state_common.py  _telemetry.py  branch_protection.py  checkpoint_gate.py  config_change.py  context_budget.py  context_pct_writer.py  create_feature_branch.py  cwd_changed.py  dangerous_command_block.py  detect_language.py  file_changed.py  hooks.json  instructions_loaded.py  permission_denied.py  phase_transition.py  post_auto_format.py  post_compact.py  post_edit_doc_size.py  post_edit_lint.py  post_temp_file_cleanup.py  post_tool_failure.py  post_track_changed_files.py  pre_bash_tier_guard.py  pre_commit_cli_gate.py  pre_commit_secret_scan.py  pre_compact.py  pre_tool_use_tier_enforcer.py  pre_write_secret_scan.py  run_cli_checks.py  scaffold_red_gate.py  session_checkpoint.py  session_end.py  (+13 more)
lib/: hook-runner.js  utils.js
schemas/: CLAUDE.md  agent-frontmatter.schema.json  config.schema.json  graph-registry.schema.json  hooks.schema.json  profile.schema.json  stamp.schema.json
scripts/: __init__.py  bootstrap_smoke.py  build_graph_registry.py  live_integration_smoke.py  validate-hooks.js
skills/: CLAUDE.md
tests/: content.test.js  (+7 more)
(+223 files in other folders)
